stick with default permgen option value